Corrects eks ci files

--- a/.github/workflows/eks_infra_deployment.yaml
+++ b/.github/workflows/eks_infra_deployment.yaml
@@ -184,4 +184,63 @@ jobs:
             name: store-app-destroy # Seperate environoment for destroy (you can add approval protection)
         steps:
             - name: Checkout Code
-              uses: actions
+              uses: actions/checkout@v4
+
+            - name: Setup Terraform
+              uses: hashicorp/setup-terraform@v3
+              with:
+                terraform_version: ${{ env.TF_VERSION }}
+
+            - name: Terraform Init
+              working-directory: ${{ env.TF_WORKING_DIR }}
+              env:
+                AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+              run: |
+                terraform init \
+                  -backend-config="bucket=${{ secrets.TF_STATE_BUCKET }}" \
+                  -backend-config="key=development/terraform.tfstate" \
+                  -backend-config="region=${{ env.AWS_REGION }}"
+
+            - name: Terraform Destroy
+              working-directory: ${{ env.TF_WORKING_DIR }}
+              env:
+                TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+              run: |
+                terraform destroy -auto-approve \
+                  -var="region=${{ env.AWS_REGION }}"
+
+            - name: Destroy Summary
+              run: |
+                cat >> $GITHUB_STEP_SUMMARY << 'EOF'
+                ## 🗑️ Infrastructure Destroyed - Development Environment
+                
+                - **Environment**: `development`
+                - **Region**: `${{ env.AWS_REGION }}`
+                - **Destroyed By**: @${{ github.actor }}
+                - **Timestamp**: $(date)
+                
+                ⚠️ All resources in this environment have been destroyed.
+                EOF
+
+    notify-success:
+      name: Deployment Success Notification
+      runs-on: self-hosted
+      needs: terraform-apply
+      if: success()
+      steps:
+        - name: Success Notification
+          run: |
+            echo "✅ Deployment to development environment completed successfully!"
+
+    notify-failure:
+      name: Deployment Failure Notification
+      runs-on: self-hosted
+      needs: terraform-apply
+      if: failure()
+      steps:
+        - name: Failure Notification
+          run: |
+            echo "❌ Deployment to development environment failed!"
+            echo "Check the workflow logs for details."
