--- a/.github/workflows/eks-infra-deployment.yml
+++ b/.github/workflows/eks-infra-deployment.yml
@@ -2,16 +2,19 @@ name: AWS EKS Infratructure Deployment
 
 on:
     workflow_dispatch:
-        inputs:
-            action:
-                description: 'Terraform action to perform'
-                required: true
-                type: choice
-                default: 'plan'
-                options:
-                    - plan
-                    - apply
-                    - destroy
+    push:
+      branches:
+      - main
+        # inputs:
+        #     action:
+        #         description: 'Terraform action to perform'
+        #         required: true
+        #         type: choice
+        #         default: 'plan'
+        #         options:
+        #             - plan
+        #             - apply
+        #             - destroy
 
 env:
     AWS_REGION: 'us-east-1'
@@ -116,7 +119,7 @@ jobs:
             - name: setup Terraform
               uses: hashicorp/setup-terraform@v3
               with:
-                terrraform_version: ${{ env.TF_VERSION }}
+                terraform_version: ${{ env.TF_VERSION }}
 
             - name: Download Plan Artifact
               uses: actions/download-artifact@v4
@@ -124,13 +127,13 @@ jobs:
                 name: terraform-plan-development-${{ github.run_number }}
                 path: ${{ env.TF_WORKING_DIR }}
 
-            - name: Terraform Init
+            - name: Terraform Plan
               working-directory: ${{ env.TF_WORKING_DIR }}
               env:
                 AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRETS_ACCESS_KEY }}
+                AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
               run: |
-                terraform init \
+                terraform plan \
                   -backend-config="bucket=${{ secrets.TF_STATE_BUCKET }}" \
                   -backend-config="key=developement/terraform.tfstate" \
                   -backend-config="region=${{ env.AWS_REGION }}"
