--- a/.github/workflows/eks_infra_deployment.yaml
+++ b/.github/workflows/eks_infra_deployment.yaml
@@ -5,16 +5,16 @@ on:
     # push:
     #   branches:
     #   - main
-        inputs:
-            action:
-                description: 'Terraform action to perform'
-                required: true
-                type: choice
-                default: 'plan'
-                options:
-                    - plan
-                    - apply
-                    - destroy
+        # inputs:
+        #     action:
+        #         description: 'Terraform action to perform'
+        #         required: true
+        #         type: choice
+        #         default: 'plan'
+        #         options:
+        #             - plan
+        #             - apply
+        #             - destroy
 
 env:
     AWS_REGION: 'us-east-1'
