Corrects EKS CI files

--- a/.github/workflows/eks_infra_deployment.yaml
+++ b/.github/workflows/eks_infra_deployment.yaml
@@ -30,6 +30,11 @@ jobs:
             - name: Checkout Code
               uses: actions/checkout@v4
 
+            - name: Setup Terraform
+              uses: hashicorp/setup-terraform@v3
+              with:
+                terraform_version: 1.14.6
+
             - name: TErraform Format Check
               working-directory: ${{ env.TF_WORKING_DIR }}
               run: terraform fmt -check -recursive
