Corrects EKS CI files again

--- a/.github/workflows/eks_infra_deployment.yaml
+++ b/.github/workflows/eks_infra_deployment.yaml
@@ -23,7 +23,7 @@ env:
 
 jobs:
     terraform-validate:
-        name: Terraform Validate
+        name: Terraform Validate!
         runs-on: ubuntu-latest
         environment: ai-APP
         steps:
